--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna Recipe</a>
-    <a href="./recipes/tomatoSoup.html">Tomato Soup Recipe</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="./recipes/tomatoSoup.html">Tomato Soup Recipe</a></li>
+        <li><a href="./recipes/pastaSalad.html">Pasta Salad Recipe</a></li>
+    </ul>
 </body>
 </html>
