Added external css file

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Recipe Page</title>
 </head>
 <body>
-    <h1>Recipes</h1>
-    <ul>
+    <h1 class="header">Recipes</h1>
+    <ul class="recipe-list">
         <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
         <li><a href="./recipes/tomatoSoup.html">Tomato Soup Recipe</a></li>
         <li><a href="./recipes/pastaSalad.html">Pasta Salad Recipe</a></li>
