--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <h1 class="header">Recipes</h1>
     <ul class="recipe-list">
-        <li class="recipe"><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li class="recipe"><a href="./recipes/tomatoSoup.html">Tomato Soup Recipe</a></li>
-        <li class="recipe"><a href="./recipes/pastaSalad.html">Pasta Salad Recipe</a></li>
+        <li class="recipe one"><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li class="recipe two"><a href="./recipes/tomatoSoup.html">Tomato Soup Recipe</a></li>
+        <li class="recipe three"><a href="./recipes/pastaSalad.html">Pasta Salad Recipe</a></li>
     </ul>
 </body>
 </html>
